OPENMEETINGS-2339 Fix issue around icons hidden behind dragging element for video-pod.

--- a/openmeetings-web/src/main/webapp/css/raw-room.css
+++ b/openmeetings-web/src/main/webapp/css/raw-room.css
@@ -425,11 +425,11 @@ html[dir="rtl"] .room-block .sb-wb .sidebar {
 .user-video .ui-dialog-titlebar
 , .sharer .ui-dialog-titlebar
 , .wb-tool-settings .ui-dialog-titlebar
-, .user-video .ui-dialog-titlebar .buttonpane
 {
 	background-color: var(--white);
 }
-.user-video .ui-dialog-titlebar .buttonpane {
+.user-video .buttonpane {
+	background-color: var(--white);
 	position: absolute;
 	right: 2px;
 	top: 2px
